--- a/app/src/main/res/xml/motion_registration.xml
+++ b/app/src/main/res/xml/motion_registration.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 16.12.19 20:26
+  ~ Last modified 17.12.19 22:01
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -44,25 +44,39 @@
 		app:duration="500"
 		app:motionInterpolator="easeIn"/>
 
+	<Transition
+		app:constraintSetStart="@id/step_5"
+		app:constraintSetEnd="@id/step_final"
+		app:duration="500"
+		app:motionInterpolator="easeIn"/>
 
-	<!-- backwards compatibilities -->
+
+	<!-- back transition compatibilities -->
 	<Transition
 		app:constraintSetStart="@id/step_2"
 		app:constraintSetEnd="@id/step_1"
 		app:duration="500"
-		app:motionInterpolator="easeInOut"/>
+		app:motionInterpolator="easeOut"/>
 
 	<Transition
 		app:constraintSetStart="@id/step_3"
 		app:constraintSetEnd="@id/step_2"
 		app:duration="500"
-		app:motionInterpolator="easeInOut"/>
+		app:motionInterpolator="easeOut"/>
 
 	<Transition
 		app:constraintSetStart="@id/step_4"
 		app:constraintSetEnd="@id/step_3"
 		app:duration="500"
-		app:motionInterpolator="easeInOut"/>
+		app:motionInterpolator="easeOut"/>
+
+	<Transition
+		app:constraintSetStart="@id/step_5"
+		app:constraintSetEnd="@id/step_4"
+		app:duration="500"
+		app:motionInterpolator="easeOut"/>
+
+
 
 
 	<ConstraintSet android:id="@+id/base">
@@ -348,6 +362,124 @@
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@id/tvChooseYourCity"
 			app:layout_constraintVertical_bias="0.3" />
+
+
+	</ConstraintSet>
+
+	<ConstraintSet android:id="@+id/step_final">
+
+		<Constraint
+			android:id="@+id/tvAllCorrect"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintVertical_bias="0.15" />
+
+		<Constraint
+			android:id="@+id/layoutFinalChangeName"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="@dimen/general_margin_16"
+
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/tvAllCorrect"
+			app:layout_constraintVertical_bias="0.3" />
+
+		<Constraint
+			android:id="@+id/layoutFinalGender"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/layoutFinalChangeName"
+			/>
+
+		<Constraint
+			android:id="@+id/layoutFinalPreferredGender"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/layoutFinalGender"
+			/>
+
+		<Constraint
+			android:id="@+id/layoutFinalAge"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_marginEnd="@dimen/general_margin_16"
+
+			app:layout_constraintEnd_toStartOf="@id/layoutFinalCity"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/layoutFinalPreferredGender"
+			/>
+
+		<Constraint
+			android:id="@+id/layoutFinalCity"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+
+			app:layout_constraintStart_toEndOf="@id/layoutFinalAge"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/layoutFinalPreferredGender"
+			/>
+
+		<Constraint
+			android:id="@+id/btnRegistrationDone"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:padding="@dimen/general_margin_16"
+
+			app:layout_constraintTop_toBottomOf="@id/layoutFinalAge"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			/>
+
+		<Constraint
+			android:id="@+id/btnFinalBack"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:padding="@dimen/general_margin_16"
+			android:layout_marginTop="@dimen/general_margin_16"
+
+			app:layout_constraintTop_toBottomOf="@id/btnRegistrationDone"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			/>
+
+		<Constraint
+			android:id="@+id/btnRegistrationBack"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/general_margin_16"
+
+			android:translationY="100dp"
+
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHorizontal_bias="0.1"
+			app:layout_constraintStart_toStartOf="parent" />
+
+		<Constraint
+			android:id="@+id/btnRegistrationNext"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/general_margin_16"
+
+			android:translationY="100dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHorizontal_bias="0.8"
+			app:layout_constraintStart_toStartOf="parent" />
 
 
 	</ConstraintSet>
