alpha auth build

--- a/app/src/main/res/layout/fragment_cards_item.xml
+++ b/app/src/main/res/layout/fragment_cards_item.xml
@@ -44,7 +44,7 @@
 				android:contentDescription="@string/description_user_photo"
 				android:scaleType="centerCrop"
 
-				app:imageUrl="@{cardItem.mainPhotoUrl}"
+				app:imageUrl="@{cardItem.baseUserInfo.mainPhotoUrl}"
 
 				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
 				android:layout_height="wrap_content"
 				android:layout_margin="@dimen/general_margin_16"
 
-				android:text="@{cardItem.name, default = @string/default_name}"
+				android:text="@{cardItem.baseUserInfo.name, default = @string/default_name}"
 				android:textSize="24sp"
 				style="@style/regular_text_white85op"
 
