--- a/app/src/main/res/layout/fragment_pairs_item.xml
+++ b/app/src/main/res/layout/fragment_pairs_item.xml
@@ -36,7 +36,7 @@
 			android:background="@color/colorAccentDark"
 			android:contentDescription="@string/description_user_photo"
 			android:scaleType="centerCrop"
-			app:imageUrl="@{matchedItem.mainPhotoUrl}"/>
+			app:imageUrl="@{matchedItem.baseUserInfo.mainPhotoUrl}"/>
 
 		<ImageView
 			android:id="@+id/pager_container_image_gradient"
@@ -54,7 +54,7 @@
 			android:layout_gravity="center|bottom"
 			android:layout_margin="@dimen/general_margin_8"
 
-			android:text="@{matchedItem.name, default = @string/default_name}"
+			android:text="@{matchedItem.baseUserInfo.name, default = @string/default_name}"
 			android:textSize="20sp"
 			style="@style/regular_text_white85op"/>
 
